--- a/ClienteTwitter/informes/informe_twitter_listaFF.jrxml
+++ b/ClienteTwitter/informes/informe_twitter_listaFF.jrxml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="informe_twitter_follows" pageWidth="595" pageHeight="842" columnWidth="555" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" uuid="8939fc58-7d33-4894-a29d-532ecf5af4a6">
+<jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="informe_twitter_listaFF" pageWidth="595" pageHeight="842" columnWidth="555" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" uuid="8939fc58-7d33-4894-a29d-532ecf5af4a6">
 	<property name="ireport.zoom" value="1.5"/>
 	<property name="ireport.x" value="0"/>
-	<property name="ireport.y" value="96"/>
+	<property name="ireport.y" value="0"/>
 	<subDataset name="dataset1" uuid="8e3def46-7a9a-4cc1-925f-ba06d7e04ea7">
 		<queryString>
 			<![CDATA[]]>
@@ -35,7 +35,7 @@
 	<title>
 		<band height="93" splitType="Stretch">
 			<frame>
-				<reportElement mode="Opaque" x="-2" y="0" width="555" height="92" backcolor="#006699" uuid="1de7e0fd-2b1d-45f7-9a38-358d73b28a77"/>
+				<reportElement mode="Opaque" x="0" y="1" width="555" height="92" backcolor="#006699" uuid="1de7e0fd-2b1d-45f7-9a38-358d73b28a77"/>
 				<staticText>
 					<reportElement x="36" y="20" width="234" height="43" forecolor="#FFFFFF" uuid="e85ae84f-c057-4bd9-9ef3-87872bcc041a"/>
 					<textElement>
@@ -44,7 +44,7 @@
 					<text><![CDATA[INFORME 2]]></text>
 				</staticText>
 				<staticText>
-					<reportElement x="270" y="45" width="263" height="18" forecolor="#FFFFFF" uuid="ecafa745-f90f-4711-b66e-fdfc210f12dc"/>
+					<reportElement x="392" y="30" width="141" height="33" forecolor="#FFFFFF" uuid="ecafa745-f90f-4711-b66e-fdfc210f12dc"/>
 					<textElement textAlignment="Right">
 						<font size="14" isBold="false"/>
 					</textElement>
@@ -76,7 +76,7 @@
 					<reportElement x="0" y="0" width="555" height="1" uuid="0488ecd5-18bf-476c-9337-fb671ff4bf73"/>
 				</line>
 				<staticText>
-					<reportElement x="4" y="0" width="143" height="20" uuid="c5685848-5d6f-44ff-b48d-9d7f1424d465"/>
+					<reportElement x="0" y="1" width="143" height="20" uuid="c5685848-5d6f-44ff-b48d-9d7f1424d465"/>
 					<textElement>
 						<font size="12" isBold="true"/>
 					</textElement>
