--- a/ClienteTwitter/informes/informe_twitter_listaT2F.jrxml
+++ b/ClienteTwitter/informes/informe_twitter_listaT2F.jrxml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="informe_twitter_follows" pageWidth="595" pageHeight="842" columnWidth="555" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" uuid="8939fc58-7d33-4894-a29d-532ecf5af4a6">
+<jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="informe_twitter_listaT2F" pageWidth="595" pageHeight="842" columnWidth="555" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" uuid="8939fc58-7d33-4894-a29d-532ecf5af4a6">
 	<property name="ireport.zoom" value="1.5"/>
 	<property name="ireport.x" value="0"/>
 	<property name="ireport.y" value="0"/>
@@ -17,11 +17,8 @@
 	<queryString>
 		<![CDATA[]]>
 	</queryString>
-	<field name="listaFollowers" class="java.util.List">
-		<fieldDescription><![CDATA[listaFollowers]]></fieldDescription>
-	</field>
-	<field name="listaFollows" class="java.util.List">
-		<fieldDescription><![CDATA[listaFollows]]></fieldDescription>
+	<field name="listaTweets" class="java.util.List">
+		<fieldDescription><![CDATA[listaTweets]]></fieldDescription>
 	</field>
 	<field name="name" class="java.lang.String">
 		<fieldDescription><![CDATA[name]]></fieldDescription>
@@ -35,7 +32,7 @@
 	<title>
 		<band height="93" splitType="Stretch">
 			<frame>
-				<reportElement mode="Opaque" x="-2" y="0" width="555" height="92" backcolor="#006699" uuid="1de7e0fd-2b1d-45f7-9a38-358d73b28a77"/>
+				<reportElement mode="Opaque" x="0" y="1" width="555" height="92" backcolor="#006699" uuid="1de7e0fd-2b1d-45f7-9a38-358d73b28a77"/>
 				<staticText>
 					<reportElement x="36" y="20" width="234" height="43" forecolor="#FFFFFF" uuid="e85ae84f-c057-4bd9-9ef3-87872bcc041a"/>
 					<textElement>
@@ -76,18 +73,11 @@
 					<reportElement x="0" y="0" width="555" height="1" uuid="0488ecd5-18bf-476c-9337-fb671ff4bf73"/>
 				</line>
 				<staticText>
-					<reportElement x="4" y="0" width="143" height="20" uuid="c5685848-5d6f-44ff-b48d-9d7f1424d465"/>
+					<reportElement x="0" y="1" width="143" height="20" uuid="c5685848-5d6f-44ff-b48d-9d7f1424d465"/>
 					<textElement>
 						<font size="12" isBold="true"/>
 					</textElement>
-					<text><![CDATA[LISTA FOLLOWERS:]]></text>
-				</staticText>
-				<staticText>
-					<reportElement x="249" y="1" width="143" height="20" uuid="2867ee43-e19a-4ccd-883d-4290453a2ebf"/>
-					<textElement>
-						<font size="12" isBold="true"/>
-					</textElement>
-					<text><![CDATA[LISTA FOLLOWS:]]></text>
+					<text><![CDATA[LISTA TWEETS:]]></text>
 				</staticText>
 			</frame>
 		</band>
@@ -98,14 +88,9 @@
 				<reportElement x="0" y="0" width="555" height="1" uuid="2352c715-52d6-40ad-af23-6dccda68db72"/>
 			</line>
 			<subreport>
-				<reportElement x="0" y="1" width="249" height="142" uuid="1daf1d5e-69e0-4836-9136-c4ebcb8b5475"/>
-				<connectionExpression><![CDATA[$P{REPORT_CONNECTION}]]></connectionExpression>
-				<subreportExpression><![CDATA["informe_twitter_listaFF_subreportlistafollowers.jasper"]]></subreportExpression>
-			</subreport>
-			<subreport>
-				<reportElement x="249" y="1" width="306" height="142" uuid="6c4ffc2e-470b-48b9-a73a-7a55831f69f4"/>
-				<connectionExpression><![CDATA[$P{REPORT_CONNECTION}]]></connectionExpression>
-				<subreportExpression><![CDATA["informe_twitter_listaFF_subreportlistafollows.jasper"]]></subreportExpression>
+				<reportElement x="0" y="1" width="555" height="142" uuid="d1d75dca-cb5a-4ffd-9768-7c0f7255ee01"/>
+				<dataSourceExpression><![CDATA[new net.sf.jasperreports.engine.data.JRBeanCollectionDataSource($F{listaTweets})]]></dataSourceExpression>
+				<subreportExpression><![CDATA["informe_twitter_subreportlistatweets.jasper"]]></subreportExpression>
 			</subreport>
 		</band>
 	</detail>
