--- a/ClienteTwitter/informes/informe_twitter_listaFF.jrxml
+++ b/ClienteTwitter/informes/informe_twitter_listaFF.jrxml
@@ -55,9 +55,9 @@
 	</title>
 	<pageHeader>
 		<band height="86" splitType="Stretch">
-			<image>
+			<image isLazy="true">
 				<reportElement x="0" y="2" width="249" height="84" uuid="411bb8d0-8613-4a33-affd-fcdd049ffc5c"/>
-				<imageExpression><![CDATA["/home/sergio/iReportProjects/logo.png"]]></imageExpression>
+				<imageExpression><![CDATA["logo.png"]]></imageExpression>
 			</image>
 			<textField>
 				<reportElement x="270" y="13" width="285" height="19" uuid="f3ed5ae9-ed27-486a-8924-01e3b9b2c268"/>
