--- a/ClienteTwitter/src/interfaz/VistaUser.form
+++ b/ClienteTwitter/src/interfaz/VistaUser.form
@@ -69,13 +69,13 @@
           <Group type="103" groupAlignment="0" attributes="0">
               <Group type="102" alignment="0" attributes="0">
                   <EmptySpace max="-2" attributes="0"/>
-                  <Group type="103" groupAlignment="0" max="-2" attributes="0">
+                  <Group type="103" groupAlignment="0" attributes="0">
                       <Group type="102" attributes="0">
                           <Group type="103" groupAlignment="3" attributes="0">
                               <Component id="jLabelTTScreenName" alignment="3" min="-2" max="-2" attributes="0"/>
                               <Component id="jLabelDate" alignment="3" min="-2" max="-2" attributes="0"/>
                           </Group>
-                          <EmptySpace max="32767" attributes="0"/>
+                          <EmptySpace max="-2" attributes="0"/>
                           <Group type="103" groupAlignment="3" attributes="0">
                               <Component id="jLabelTweets1" alignment="3" min="-2" max="-2" attributes="0"/>
                               <Component id="jLabelFollowers" alignment="3" min="-2" max="-2" attributes="0"/>
